--- a/index.html
+++ b/index.html
@@ -19,6 +19,51 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <div class="time-block row">
+        <div class="hour col-md-1">0900</div>
+        <textarea name="task" id="task" class="description col-md-10" rows="3"></textarea>
+        <button class="saveBtn col-md-1"><i class="far fa-save"></i></button>
+      </div>
+      <div class="time-block row">
+        <div class="hour col-md-1">1000</div>
+        <textarea name="task" id="task" class="description col-md-10" rows="3"></textarea>
+        <button class="saveBtn col-md-1"><i class="far fa-save"></i></button>
+      </div>
+      <div class="time-block row">
+        <div class="hour col-md-1">1100</div>
+        <textarea name="task" id="task" class="description col-md-10" rows="3"></textarea>
+        <button class="saveBtn col-md-1"><i class="far fa-save"></i></button>
+      </div>
+      <div class="time-block row">
+        <div class="hour col-md-1">1200</div>
+        <textarea name="task" id="task" class="description col-md-10" rows="3"></textarea>
+        <button class="saveBtn col-md-1"><i class="far fa-save"></i></button>
+      </div>
+      <div class="time-block row">
+        <div class="hour col-md-1">1300</div>
+        <textarea name="task" id="task" class="description col-md-10" rows="3"></textarea>
+        <button class="saveBtn col-md-1"><i class="far fa-save"></i></button>
+      </div>
+      <div class="time-block row">
+        <div class="hour col-md-1">1400</div>
+        <textarea name="task" id="task" class="description col-md-10" rows="3"></textarea>
+        <button class="saveBtn col-md-1"><i class="far fa-save"></i></button>
+      </div>
+      <div class="time-block row">
+        <div class="hour col-md-1">1500</div>
+        <textarea name="task" id="task" class="description col-md-10" rows="3"></textarea>
+        <button class="saveBtn col-md-1"><i class="far fa-save"></i></button>
+      </div>
+      <div class="time-block row">
+        <div class="hour col-md-1">1600</div>
+        <textarea name="task" id="task" class="description col-md-10" rows="3"></textarea>
+        <button class="saveBtn col-md-1"><i class="far fa-save"></i></button>
+      </div>
+      <div class="time-block row">
+        <div class="hour col-md-1">1700</div>
+        <textarea name="task" id="task" class="description col-md-10" rows="3"></textarea>
+        <button class="saveBtn col-md-1"><i class="far fa-save"></i></button>
+      </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
